# javis

./: .gitignore  CREATE_PR_INSTRUCTIONS.md  IDENTITY.md  MEMORY.md  PR_CREATION.md  README.md  USER.md
javis/: CHANGELOG.md  DEPLOYMENT_COMPLETE.md  Makefile  PUSH_INSTRUCTIONS.md  QUICK_PUSH.md  README.md  SSH_SETUP.md  __init__.py  advanced_agent.py  agent.py  chat_agent.py  config.py  core.py  create-repo.sh  demo.txt  interview_questions.py  leetcode_questions.py  memory.py  metacognition.py  planner.py  pyproject.toml  requirements.txt  setup-ssh-push.sh  skills.py  tools.py
javis/examples/: __init__.py  agent_demo.py  basic_usage.py  chat_demo.py  chatbot.py  custom_skill.py  weather_demo.py  web_example.py
javis/tests/: __init__.py  test_core.py  test_memory.py  test_tools.py
